# rust-ai

./: .gitignore  .gitleaks.toml  CLAUDE.md  CODE_DATASET_INDEX.md  CODE_DATASET_SOURCES.md  CUBECL_0.9_FIX_GUIDE.md  Cargo.toml  DATASET_DOWNLOAD_SUMMARY.md  IMPLEMENTATION_COMPLETE.txt  IaC-DATASET-COLLECTION-SUMMARY.md  IaC-FILES-MANIFEST.txt  LICENSE-POLICY.md  LOSS_DYNAMICS_CHANGES.md  MAINTAINED_FORKS_ADOPTION.md  NOTICE  index.md
axolotl-rs/: .codecov.yml  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUDA_STATUS.md  Cargo.toml  E2E_VALIDATION_RESEARCH.md  GPU_IMPLEMENTATION_COMPLETE.md  LICENSE-MIT  LORA_IMPLEMENTATION_SUMMARY.md  NEXT_PHASE_LORA_QLORA.md  PHASE1_LORA_COMPLETE.md  PORTING_PLAN.md  PR_REVIEW_RESPONSE.md  README.md  READY_FOR_GPU_TESTING.md  TEST_COVERAGE_PLAN.md  roadmap.md  test_config.yaml
axolotl-rs/.github/: CI_DEPENDENCY_CONFIGURATION.md
axolotl-rs/benches/: config_parsing.rs
axolotl-rs/scripts/: gpu-test.sh  setup_e2e_validation.sh
axolotl-rs/src/: cli.rs  config.rs  dataset.rs  error.rs  lib.rs  llama_common.rs  lora_llama.rs  main.rs  model.rs  normalization.rs  optimizer.rs  qlora_llama.rs  scheduler.rs  trainer.rs  vsa_accel.rs
axolotl-rs/tests/: cli_tests.rs  e2e_qlora.rs  gpu_checkpoint.rs  gpu_lora_targets.rs  gpu_training.rs  gpu_utils.rs  lora_llama_tests.rs  qlora_training.rs
bitnet-quantize/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
bitnet-quantize/benches/: bitnet_ops.rs
bitnet-quantize/examples/: basic.rs  quantization.rs
bitnet-quantize/src/: adapter.rs  config.rs  error.rs  lib.rs
hybrid-predict-trainer-rs/: .gitignore  .gitleaks.toml  BURN_INTEGRATION_FINAL.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GPU_COORDINATION_PLAN.md  GPU_KERNEL_PROGRESS.md  IMPLEMENTATION_PLAN.md  LICENSE-MIT  MNIST_VALIDATION_RESULTS.md  PHASE_2B_FINAL_SUMMARY.md  PHASE_2_BENCHMARKING_REPORT.md  PHASE_2_TODOS.md  PHASE_3_RELEASE_PREP_REPORT.md  PHASE_4_V0.3.0_PLAN.md  PROJECT_STATUS.md  README.md  RECOMMENDED_CONFIGS.toml  SECURITY.md  SESSION_2026-02-06_BUGFIX.md  SYNC_FIX_COMPLETE.md  V0.2.0_RELEASE_SUMMARY.md  V0.3.0_PROGRESS_SUMMARY.md  VRAM_GROWTH_ANALYSIS.md  VRAM_INVESTIGATION_SUMMARY.md  VRAM_MANAGEMENT_SUMMARY.md  deny.toml  verify_delta_head_fix.rs
hybrid-predict-trainer-rs/.githooks/: pre-commit
hybrid-predict-trainer-rs/benches/: gpu_kernels.rs  gpu_memory_profile.rs  hybrid_trainer_benchmarks.rs  phase_transitions.rs  predictor_performance.rs  residual_extraction.rs
hybrid-predict-trainer-rs/docs/: CROSS_REPO_COORDINATION.md  ENGINEERING_SPEC.md  GPU_KERNEL_IMPLEMENTATION_GUIDE.md  INDEX.md  MEMORY_OPTIMIZATION_COMPLETE.md  MIXED_PRECISION_GUIDE.md  PHASE_ENHANCEMENTS.md  THEORY.md  WORKFLOW.md  WORKSPACE_ANALYSIS_COMPLETE.md
hybrid-predict-trainer-rs/examples/: basic_training.rs  burn_mlp_mnist.rs  check_vram_budget.rs  comprehensive_parameter_sweep.rs  confidence_tuning_experiment.rs  configuration.rs  correction_accuracy_validation.rs  custom_predictor.rs  gpt2_small_baseline.rs  gpt2_small_hybrid.rs  gpt2_small_memory_optimized.rs  gpu_accelerated.rs  mnist_cnn_validation.rs  prediction_horizon_research.rs
hybrid-predict-trainer-rs/scripts/: analyze_results.py  run_benchmarks.sh  run_full_evaluation.sh  run_quick_validation.sh  validate_vram.sh
hybrid-predict-trainer-rs/src/: bandit.rs  burn_integration.rs  checkpoint.rs  config.rs  corrector.rs  cpu_offloading.rs  delta_accumulator.rs  divergence.rs  dynamics.rs  ecosystem.rs  error.rs  full_train.rs  gpu.rs  gradient_accumulation.rs  gradient_checkpointing.rs  gru.rs  lib.rs  metrics.rs  mixed_precision.rs  phases.rs  predict_aware_memory.rs  predictive.rs  quantization.rs  residuals.rs  state.rs  timing.rs  vram_budget.rs  vram_manager.rs  warmup.rs
hybrid-predict-trainer-rs/tests/: advanced_edge_cases.rs  auto_tuning_tests.rs  burn_autodiff_sync_fix.rs  burn_helper_tests.rs  burn_integration_basic.rs  burn_integration_mlp.rs  burn_integration_test.rs  end_to_end.rs  gpu_batched_performance.rs  gpu_kernel_tests.rs  gpu_runtime_integration.rs  gpu_validation_gpt2.rs  gpu_validation_mnist.rs  gpu_validation_xor.rs  metrics_export.rs  micro_corrections.rs  phase_transitions.rs  vram_validation.rs
training-tools/: ANALYSIS_TAB_ENHANCEMENT.md  CHARTS_TAB_ENHANCEMENTS.md  CLAUDE.md  Cargo.toml  Cargo.toml.publish  LOSS_DYNAMICS_IMPLEMENTATION.md  LR_ADVISOR_INTEGRATION.md  TERMINAL_SIZE_CHECK.patch  UI_UX_AUDIT.md  UI_UX_AUDIT_COMPLETION.md  UI_UX_AUDIT_SUMMARY.md  UI_UX_FIXES_APPLIED.md  charts_enhancements_impl.rs  insert_analysis.py
training-tools/config/: ana_persona.toml  hf_upload.toml
training-tools/docs/: UI_GUIDE.md  training_methodology.md
training-tools/examples/: adaptive_controller_demo.rs  adaptive_lr_demo.rs  alerts_demo.rs  batch_tuner_demo.rs  curve_analysis_demo.rs  early_stopping_demo.rs  gradient_control_demo.rs  landscape_demo.rs  loss_dynamics_demo.rs  loss_dynamics_tracking.rs  lr_advisor_demo.rs  rerun_demo.rs  smoothing_demo.rs  specialist_generalist_comparison.rs  train_fresh.rs
training-tools/screenshots/: charts_gradient_norm.ansi  charts_loss_line.ansi  color_legend.ansi  dashboard_empty.ansi  dashboard_full.html  dashboard_with_data.ansi  navigation_0000.ansi  navigation_0001.ansi  navigation_0002.ansi  network_tab.ansi  overview_tab.ansi  phase_colors.ansi  phase_transition_0000.ansi  tab_analysis.ansi  (+17 more)
trit-vsa/: CHANGELOG.md  Cargo.toml  GPU_DISPATCH_IMPLEMENTATION.md
tritter-accel/: CHANGELOG.md  CLAUDE.md  Cargo.toml  QC_WORKFLOW.md  README.md  SPEC.md
tritter-model-rs/: CLAUDE.md  Cargo.toml  README.md
unsloth-rs/: BENCHMARKING.md  BRANCH_STRATEGY.md  CUBECL_RESEARCH_REQUIREMENTS.md  Cargo.toml  FLASH_ATTENTION_PLAN.md  GPU_SETUP.md  GPU_TESTS_IMPLEMENTATION_SUMMARY.md  HANDOFF.md  INTEGRATION_TESTS_SUMMARY.md  ISSUE_STATUS.md  NEXT_PHASE_PLAN.md  PHASE_2_5_IMPLEMENTATION_PLAN.md  PHASE_3_5_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FULL.md  PUBLISHING.md  README.md  ROADMAP.md  SUMMARY.md  TASKS.md  TASKS_2_5_2_6_PLAN.md  TERNARY_GPU_IMPLEMENTATION.md  TESTING_STATUS.md
(+284 files in other folders)
