[workspace]
resolver = "2"
members = [
    # "axolotl-rs",  # Temporarily excluded: reqwest brings js-sys conflict with uuid
    "bitnet-quantize",
    "hybrid-predict-trainer-rs",
    "peft-rs",
    "qlora-rs",
    # "rust-ai-core",  # Temporarily excluded: cubecl uuid/js-sys conflict
    "training-tools",
    "trit-vsa",
    "tritter-accel",
    "tritter-model-rs",
    # "unsloth-rs",  # Temporarily excluded: cubecl uuid/js-sys conflict
    "vsa-optim-rs",
]
exclude = [
    "moltbook-proposal/src/web/wasm",
    "axolotl-rs",     # reqwest brings js-sys conflict with uuid/burn-core
    "rust-ai-core",   # cubecl brings uuid/js-sys conflict with burn-core
    "unsloth-rs",     # cubecl brings uuid/js-sys conflict with burn-core
]

# Ensure all crates use the local versions for development
[patch.crates-io]
peft-rs = { path = "peft-rs" }
qlora-rs = { path = "qlora-rs" }
# unsloth-rs = { path = "unsloth-rs" }  # Excluded: cubecl conflict
trit-vsa = { path = "trit-vsa" }
bitnet-quantize = { path = "bitnet-quantize" }
# axolotl-rs = { path = "axolotl-rs" }  # Excluded: reqwest js-sys conflict
vsa-optim-rs = { path = "vsa-optim-rs" }
tritter-accel = { path = "tritter-accel" }
# rust-ai-core = { path = "rust-ai-core" }  # Excluded: cubecl conflict
hybrid-predict-trainer-rs = { path = "hybrid-predict-trainer-rs" }

# Use maintained candle fork with qlora-gemm
candle-core = { git = "https://github.com/tzervas/qlora-candle.git", branch = "use-qlora-gemm" }
candle-nn = { git = "https://github.com/tzervas/qlora-candle.git", branch = "use-qlora-gemm" }
candle-transformers = { git = "https://github.com/tzervas/qlora-candle.git", branch = "use-qlora-gemm" }


# Patch git dependencies to use local paths for development
[patch."https://github.com/tzervas/peft-rs"]
peft-rs = { path = "peft-rs" }

[patch."https://github.com/tzervas/qlora-rs"]
qlora-rs = { path = "qlora-rs" }

# [patch."https://github.com/tzervas/unsloth-rs"]  # Excluded: cubecl conflict
# unsloth-rs = { path = "unsloth-rs" }

[patch."https://github.com/tzervas/trit-vsa"]
trit-vsa = { path = "trit-vsa" }

[patch."https://github.com/tzervas/bitnet-quantize"]
bitnet-quantize = { path = "bitnet-quantize" }

# [patch."https://github.com/tzervas/axolotl-rs"]  # Excluded: reqwest js-sys conflict
# axolotl-rs = { path = "axolotl-rs" }

[patch."https://github.com/tzervas/vsa-optim-rs"]
vsa-optim-rs = { path = "vsa-optim-rs" }

[patch."https://github.com/tzervas/tritter-accel"]
tritter-accel = { path = "tritter-accel" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
description = "Rust AI training stack"
repository = "https://github.com/tzervas/rust-ai"
keywords = ["machine-learning", "llm", "fine-tuning"]
categories = ["science"]

[workspace.dependencies]
candle-core = { version = "0.9.2", default-features = false }
candle-nn = { version = "0.9.2", default-features = false }
candle-transformers = { version = "0.9.2", default-features = false }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
safetensors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
# Use default-features = false to avoid plotters -> web-sys -> js-sys conflict with uuid
criterion = { version = "0.8", default-features = false }
half = "2.7"

# CubeCL GPU compute - COMMENTED OUT due to uuid/js-sys conflict
# cubecl brings wasm-bindgen-futures which pins js-sys v0.3.72, but
# uuid v1.19+ (from burn-core) requires js-sys with "std" feature (0.3.74+)
# Uncomment once upstream cubecl is updated
# cubecl = "0.9"
# cubecl-cuda = "0.9"
# cubecl-core = "0.9"
# cubecl-runtime = "0.9"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
