[package]
name = "bitnet-quantize"
version = "0.2.1"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Microsoft BitNet b1.58 quantization and inference for Rust"
repository = "https://github.com/tzervas/bitnet-quantize"
homepage = "https://github.com/tzervas/bitnet-quantize"
documentation = "https://docs.rs/bitnet-quantize"
keywords = ["bitnet", "quantization", "ternary", "llm", "inference"]
categories = ["science", "mathematics"]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Sister crate dependencies
trit-vsa = { version = "0.3.0", path = "../trit-vsa" }
peft-rs = { version = "1.0.0", optional = true }
qlora-rs = { version = "1.0.0", optional = true }

# GPU acceleration via CubeCL
# NOTE: Disabled due to uuid/js-sys conflict with burn-core
# cubecl = { version = "0.9", optional = true }
# cubecl-cuda = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
# CUDA feature temporarily reduced due to cubecl/uuid conflict
cuda = [
    "candle-core/cuda",
    # "dep:cubecl",  # Disabled: uuid/js-sys conflict with burn-core
    # "dep:cubecl-cuda",  # Disabled: uuid/js-sys conflict with burn-core
    # "trit-vsa/cuda",  # Disabled: requires cubecl
]
peft = ["dep:peft-rs"]
gguf-export = ["dep:qlora-rs"]

[lints]
workspace = true

[[bench]]
name = "bitnet_ops"
harness = false
