[package]
name = "trit-vsa"
version = "0.3.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Balanced ternary arithmetic library with bitsliced storage and VSA operations"
repository = "https://github.com/tzervas/trit-vsa"
homepage = "https://github.com/tzervas/trit-vsa"
documentation = "https://docs.rs/trit-vsa"
keywords = ["ternary", "arithmetic", "vsa", "hyperdimensional", "bitsliced"]
categories = ["mathematics", "data-structures", "science"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
candle-core = { workspace = true, optional = true }
# NOTE: CubeCL disabled due to uuid/js-sys conflict with burn-core
# cubecl = { version = "0.9", optional = true }
# cubecl-cuda = { version = "0.9", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.9.0"

[features]
default = []
simd = []
# CUDA feature temporarily reduced due to cubecl/uuid conflict
cuda = [
    "dep:candle-core",
    # "dep:cubecl",  # Disabled: uuid/js-sys conflict with burn-core
    # "dep:cubecl-cuda",  # Disabled: uuid/js-sys conflict with burn-core
]

[lints]
workspace = true

[[bench]]
name = "ternary_ops"
harness = false
