[package]
name = "tritter-model-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Pure Rust Tritter transformer model with BitNet quantization"
license = "MIT"
repository = "https://github.com/tzervas/rust-ai"
keywords = ["llm", "transformer", "bitnet", "ternary", "training"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
# Core tensor operations
candle-core = { workspace = true }
candle-nn = { workspace = true }

# BitNet quantization (published on crates.io)
bitnet-quantize = "0.2"
trit-vsa = "0.3"

# Hybrid predictive training (path for development)
hybrid-predict-trainer-rs = { version = "0.2", path = "../hybrid-predict-trainer-rs" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tokenization (HuggingFace tokenizers for BPE backend)
tokenizers = { workspace = true }

# Random number generation
rand = { workspace = true }

# Logging
log = { workspace = true }

# Half precision
half = { workspace = true, features = ["serde"] }

# Arrow/Parquet for data loading (optional)
arrow-array = { version = "54", optional = true }
arrow-schema = { version = "54", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap"] }

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "bitnet-quantize/cuda",
    "hybrid-predict-trainer-rs/cuda",
]
parquet = ["dep:arrow-array", "dep:arrow-schema", "dep:parquet"]

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
anyhow = { workspace = true }
tempfile = { workspace = true }
training-tools = { path = "../training-tools", default-features = false }
chrono = { workspace = true }

[[example]]
name = "train"
path = "examples/train.rs"

[[example]]
name = "train_500m"
path = "examples/train_500m.rs"

[[example]]
name = "train_100m"
path = "examples/train_100m.rs"
